fix: alignment of destination shots

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,7 +64,7 @@ body {
       flex-direction: row;
       width: 50%;
       height: 100%;
-      vertical-align: middle;
+      align-items: flex-end;
     }
   }
 
